output/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: debug-ubuntu-service
  namespace: debug-ubuntu-ns
spec:
  selector:
    app: debug-ubuntu
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
